# GA_Solver

./: .gitignore  CMakeLists.txt  Readme.md  pyproject.toml  requirements.txt  setup.py
data/: berlin52_TSPJ_JT.csv  eil76_TSPJ_JT.csv  fri26_TSPJ_JT.csv  gr17_TSPJ_JT.csv  gr21_TSPJ_JT.csv  gr48_TSPJ_JT.csv
examples/: basic_usage.py
gasolver/: __init__.py  _core.cp312-win_amd64.pyd  python_bindings.cpp
gasolver.egg-info/: SOURCES.txt  requires.txt
include/: cost_matrix.h  crossover.h  fitness_evaluator.h  genetic_kernels.cuh  genome.h  genome.hpp  mutation.h  parent_selection.h  population.h  population.hpp
logs/: results_log.csv
src/: cost_matrix.cu  crossover.cu  fitness_evaluator.cu  ga_solver_main.cu  genome.cu  main.cpp  mutation.cu  parent_selection.cu  population.cu
src/cuda/: cost_matrix.cu  crossover.cu  fitness_evaluator.cu  ga_solver_main.cu  genome.cu  mutation.cu  parent_selection.cu  population.cu
src/ga_core/: genome.cpp  population.cpp
src/gpu/: genetic_kernels.cu
tests/: mutation_test.cpp  test_cost_matrix.cu  test_crossover.cu  test_fitness_evaluator.cu  test_genome.cu  test_mutation.cu  test_parent_selection.cu  test_population.cu
